--- a/app/src/main/res/layout/tab_layout.xml
+++ b/app/src/main/res/layout/tab_layout.xml
@@ -11,11 +11,12 @@
         app:tabGravity="fill"
         app:tabMode="fixed"
 
-        android:background="#2a4876"
-        app:tabIndicatorColor="#df99a0"
-       app:tabIndicatorHeight="7dp"
+        app:tabBackground="@drawable/tab_color_selector"
+        app:tabIndicatorColor="#29568f"
+        app:tabIndicatorHeight="7dp"
         app:tabSelectedTextColor="@color/white"
-        app:tabTextColor="@color/gery"
+
+        app:tabTextColor="#29568f"
         android:layout_width="match_parent"
         android:layout_height="wrap_content">
     </android.support.design.widget.TabLayout>
