--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,13 +2,16 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="drawerArrowStyle">@style/DrawerArrowStyle</item>
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
 
     </style>
-
-
+<style name="DrawerArrowStyle" parent="Widget.AppCompat.DrawerArrowToggle">
+<item name="spinBars">true</item>
+<item name="color">@color/selected</item>
+</style>
     <style name="AppTheme.Card.Margins" parent="CardView">
         <item name="android:layout_marginTop">@dimen/margin_normal</item>
         <item name="android:layout_marginBottom">@dimen/margin_normal</item>
