--- a/app/src/main/res/layout/summaryclass.xml
+++ b/app/src/main/res/layout/summaryclass.xml
@@ -15,6 +15,9 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             app:contentScrim="?attr/colorPrimary"
+            android:background="#ffee24"
+            app:title="Summary"
+            android:titleTextColor="#171717"
             app:layout_scrollFlags="enterAlways" />
 
     </android.support.design.widget.AppBarLayout>
@@ -74,7 +77,7 @@
                 android:text="Total Amount"
                 android:textColor="#000"
                 android:textSize="14dp" />
-            =
+
 
             <TextView
                 android:id="@+id/tvTicketTotal"
@@ -97,7 +100,7 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginLeft="75dp"
-                android:background="@drawable/selector_xml_btn_yellow"
+                android:background="#29568f"
                 android:text="Print Summary"
                 android:textColor="#FFF"
                 android:textSize="14dp" />
