--- a/app/src/main/res/layout/retrun_ticket_fragment.xml
+++ b/app/src/main/res/layout/retrun_ticket_fragment.xml
@@ -10,15 +10,15 @@
     <EditText
         android:id="@+id/etCarNumber"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="50dp"
         android:layout_marginTop="10dp"
         android:background="#FFF"
         android:gravity="center"
+        android:textSize="30dp"
         android:layout_marginLeft="5dp"
         android:layout_marginRight="5dp"
         android:hint="Enter number"
         android:inputType="number" />
-
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -26,7 +26,7 @@
         android:layout_marginBottom="50dp"
         android:layout_marginLeft="40dp"
         android:layout_marginRight="40dp"
-        android:layout_marginTop="40dp"
+        android:layout_marginTop="65dp"
         android:background="#e8e9cf"
         card_view:cardCornerRadius="2dp"
         card_view:cardElevation="5dp">
@@ -38,7 +38,7 @@
             android:orientation="vertical"
             android:background="#e8e9cf"
             android:layout_margin="1dp"
-            android:padding="18dp"
+            android:padding="12dp"
             android:weightSum="8">
 
             <LinearLayout
@@ -54,13 +54,13 @@
                     android:gravity="center"
                     android:text="PARKING TICKET"
                     android:textSize="15dp"
-                    android:textStyle="bold" />
+                    android:textStyle="bold"
+                   />
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="5dp"
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -85,7 +85,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="5dp"
+
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -110,7 +110,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="5dp"
+
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -135,7 +135,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="5dp"
+
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -162,7 +162,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="5dp"
+
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -187,40 +187,68 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-                android:layout_marginTop="5dp"
+
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
                 android:weightSum="2">
 
                 <TextView
-                    android:id="@+id/Olocation"
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Location" />
+                    android:text="Total Hours"
+                    android:textColor="#b11911"
+                    android:textSize="17dp"
+                    android:textStyle="bold"/>
 
                 <TextView
-                    android:id="@+id/tvLocation"
+                    android:id="@+id/tvTotalHours"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
+                    android:textSize="17dp"
+                    android:textStyle="bold"
+                    android:textColor="#b11911"
                     android:text="" />
+
+
+
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="0dp"
+
                 android:layout_weight="1"
                 android:gravity="center"
-                android:orientation="vertical">
+                android:orientation="horizontal"
+                android:weightSum="2">
 
                 <TextView
+
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Parking at your own risk    " />
+                    android:layout_weight="1"
+                    android:textSize="17dp"
+                    android:textStyle="bold"
+                    android:textColor="#b11911"
+                    android:text="Total Price" />
+
+                <TextView
+                    android:id="@+id/tvTotallPrice"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:gravity="right"
+                    android:textSize="17dp"
+                    android:textStyle="bold"
+                    android:textColor="#b11911"
+                    android:text="" />
             </LinearLayout>
+
         </LinearLayout>
 
     </android.support.v7.widget.CardView>
