--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,7 +11,7 @@
     <color name="edback">#d7dbdc</color>
     <color name="pageback">#FFF</color>
     <color name="selected">#29568f</color>
-    <color name="unselected">#FFF</color>
+    <color name="unselected">#29568f</color>
     <color name="mainToolColor">@color/colorPrimary</color>
 
 </resources>
