lepak 25..........put parsing

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,13 +35,13 @@
             <EditText
                 android:id="@+id/edSiteName"
                 android:layout_width="match_parent"
-                android:layout_height="31dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="20dp"
                 android:background="#29568f"
 
-                android:drawablePadding="5dp"
-                android:drawableStart="@drawable/email"
-                android:drawableLeft="@drawable/email"
+                android:drawableLeft="@drawable/lettericon"
+                android:drawablePadding="10dp"
+                android:drawableStart="@drawable/lettericon"
                 android:hint="Email"
                 android:imeOptions="actionNext"
                 android:inputType="textEmailAddress"
@@ -50,11 +50,11 @@
             <EditText
                 android:id="@+id/password"
                 android:layout_width="match_parent"
-                android:layout_height="31dp"
+                android:layout_height="40dp"
                 android:layout_marginTop="10dp"
                 android:background="#29568f"
-                android:drawableLeft="@drawable/keypass"
-                android:drawablePadding="5dp"
+                android:drawableLeft="@drawable/keyicon"
+                android:drawablePadding="10dp"
                 android:ems="10"
                 android:hint="Password"
                 android:inputType="textPassword"
@@ -64,7 +64,7 @@
             <Button
                 android:id="@+id/btLogin"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:background="#fbd022"
@@ -87,7 +87,7 @@
             <Button
                 android:id="@+id/btRegister"
                 android:layout_width="match_parent"
-                android:layout_height="32dp"
+                android:layout_height="40dp"
                 android:layout_gravity="center_horizontal"
                 android:layout_marginTop="20dp"
                 android:background="#fbd022"
