--- a/app/src/main/res/layout/retrun_ticket_fragment.xml
+++ b/app/src/main/res/layout/retrun_ticket_fragment.xml
@@ -264,6 +264,6 @@
         android:layout_marginTop="10dp"
         android:background="#ffee24"
         android:text="Return Ticket"
-        android:textColor="#29568f" />
+        android:textColor="#171717" />
 
 </RelativeLayout>
