--- a/app/src/main/res/layout/activity_nfc_get_all_coins.xml
+++ b/app/src/main/res/layout/activity_nfc_get_all_coins.xml
@@ -4,48 +4,99 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#29568f"
     android:orientation="vertical"
-    android:layout_margin="100dp"
-    android:weightSum="6"
     tools:context="com.codextech.ibtisam.lepak_app.activity.NfcGetAllCoinsActivity">
-
-
-    <Button
-        android:id="@+id/BNsave"
-        android:layout_width="wrap_content"
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-         android:layout_weight="1"
+        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">
 
-        android:text="showAllData" />
+        <android.support.v7.widget.Toolbar
+            android:id="@+id/toolbar"
+            android:layout_width="match_parent"
+            android:layout_height="?attr/actionBarSize"
+            android:background="#ffee24"
+            app:titleTextColor="#171717"
+            app:layout_scrollFlags="enterAlways"
+            app:title="NFC Collection" />
 
-    <TextView
-        android:id="@+id/text"
-        android:layout_width="wrap_content"
+    </android.support.design.widget.AppBarLayout>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="35dp"
-        android:text="TextView" />
+        android:orientation="horizontal"
+        android:paddingLeft="60dp"
+        android:paddingRight="60dp"
+        android:paddingTop="50dp"
+        android:weightSum="2">
 
-    <TextView
-        android:id="@+id/text2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="35dp"
-        android:text="TextView"
-        android:layout_weight="1"
-  />
+        <TextView
 
-    <TextView
-        android:id="@+id/text3"
-        android:layout_width="wrap_content"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Amount" />
+
+        <TextView
+            android:id="@+id/tvAmountNfc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="TextView"
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="35dp"
-        android:layout_weight="1"
-   />
+        android:orientation="horizontal"
+        android:paddingLeft="60dp"
+        android:paddingRight="60dp"
+        android:paddingTop="50dp"
+        android:weightSum="2">
+
+        <TextView
+
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:text="Vehicle No." />
+
+        <TextView
+            android:id="@+id/tvVehicleNfc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="right"
+            android:layout_weight="1"
+            android:gravity="right"
+            android:text="" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:padding="15dp"
+        android:weightSum="1">
+
+        <Button
+            android:id="@+id/BNsave"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_weight="1"
+            android:background="#ffee24"
+            android:textColor="#171717"
+            android:text="showAllData" />
+
+
+    </LinearLayout>
 
 
 </LinearLayout>
