--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,57 +1,43 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:fitsSystemWindows="true"
-  >
-    <android.support.v7.widget.Toolbar
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    android:orientation="vertical">
+
+    <android.support.v7.widget.Toolbar xmlns:android="http://schemas.android.com/apk/res/android"
+        android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="#ffee24"
-        android:id="@+id/toolbar"
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:title="Dashboard"
-        app:titleTextColor="#171717"/>
+        app:titleTextColor="#171717" />
 
-
-    <android.support.v4.widget.DrawerLayout
-        xmlns:android="http://schemas.android.com/apk/res/android"
+    <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_height="match_parent"
-        android:layout_width="match_parent"
         android:id="@+id/drawerLayout"
-        >
-
-
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
         <FrameLayout
-            android:orientation="vertical"
+            android:id="@+id/containerView"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
 
-            android:id="@+id/containerView">
-        </FrameLayout>
+            android:orientation="vertical"></FrameLayout>
 
-
-
-        <android.support.design.widget.NavigationView
-            xmlns:android="http://schemas.android.com/apk/res/android"
+        <android.support.design.widget.NavigationView xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
+            android:id="@+id/shitstuff"
             android:layout_width="150dp"
             android:layout_height="match_parent"
             android:layout_gravity="start"
-            android:id="@+id/shitstuff"
-            app:itemTextColor="@color/black"
-            app:menu="@menu/drawermenu"
             app:headerLayout="@layout/navigation_header"
-            />
-
-
-
+            app:itemTextColor="@color/black"
+            app:menu="@menu/drawermenu" />
     </android.support.v4.widget.DrawerLayout>
 </LinearLayout>
 
