--- a/app/src/main/res/layout/activity_nfc_get_all_coins.xml
+++ b/app/src/main/res/layout/activity_nfc_get_all_coins.xml
@@ -8,6 +8,7 @@
     android:background="#29568f"
     android:orientation="vertical"
     tools:context="com.codextech.ibtisam.lepak_app.activity.NfcGetAllCoinsActivity">
+
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar"
         android:layout_width="match_parent"
@@ -19,13 +20,11 @@
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:background="#ffee24"
-            app:titleTextColor="#171717"
             app:layout_scrollFlags="enterAlways"
-            app:title="NFC Collection" />
+            app:title="NFC Collection"
+            app:titleTextColor="#171717" />
 
     </android.support.design.widget.AppBarLayout>
-
-
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -37,7 +36,6 @@
         android:weightSum="2">
 
         <TextView
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -51,8 +49,8 @@
             android:layout_weight="1"
             android:gravity="right"
             android:text="" />
-
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -63,7 +61,6 @@
         android:weightSum="2">
 
         <TextView
-
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -106,6 +103,7 @@
             android:text="" />
 
     </LinearLayout>
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -119,13 +117,11 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:background="#ffee24"
-            android:textColor="#171717"
-            android:text="showAllData" />
+            android:text="showAllData"
+            android:textColor="#171717" />
 
 
     </LinearLayout>
-
-
 </LinearLayout>
 
 
