--- a/app/src/main/res/layout/print_ticket_fragment.xml
+++ b/app/src/main/res/layout/print_ticket_fragment.xml
@@ -11,26 +11,26 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
-
         android:padding="10dp">
+
         <EditText
             android:id="@+id/enterNum"
             android:layout_width="match_parent"
             android:layout_height="50dp"
-            android:ems="10"
-            android:textSize="30dp"
             android:background="#FFF"
+            android:ems="10"
             android:gravity="center"
             android:hint="@string/enter_number"
             android:inputType="number"
-            android:textColorHint="#FFC9CACA" />
+            android:textColorHint="#FFC9CACA"
+            android:textSize="30dp" />
     </LinearLayout>
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
-        android:gravity="center"
         android:background="#29568f"
+        android:gravity="center"
         android:orientation="horizontal"
         android:padding="10dp"
         android:weightSum="2">
@@ -42,7 +42,6 @@
             android:layout_margin="5dp"
             android:layout_weight="1"
             android:background="@drawable/caricon"
-
             android:gravity="center_horizontal"
             android:textColor="#000" />
 
@@ -52,9 +51,8 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
+            android:background="@drawable/bikeicon"
             android:gravity="center_horizontal"
-           android:background="@drawable/bikeicon"
-
             android:textColor="#000" />
 
     </LinearLayout>
@@ -62,9 +60,9 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="100dp"
+        android:background="#29568f"
         android:gravity="center"
         android:orientation="horizontal"
-        android:background="#29568f"
         android:padding="10dp"
         android:weightSum="2">
 
@@ -74,9 +72,8 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:background="@drawable/vanicon"
-
+            android:gravity="center_horizontal"
             android:textColor="#000" />
 
         <Button
@@ -85,9 +82,8 @@
             android:layout_height="match_parent"
             android:layout_margin="5dp"
             android:layout_weight="1"
-            android:gravity="center_horizontal"
             android:background="@drawable/truckicon"
-
+            android:gravity="center_horizontal"
             android:textColor="#000" />
 
     </LinearLayout>
