--- a/app/src/main/res/layout/retrun_ticket_fragment.xml
+++ b/app/src/main/res/layout/retrun_ticket_fragment.xml
@@ -3,22 +3,22 @@
     xmlns:card_view="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:background="#29568f"
     android:layout_height="match_parent"
+    android:background="#29568f"
     tools:context="com.codextech.ibtisam.lepak_app.activity.TicketFormatActivity">
 
     <EditText
         android:id="@+id/etCarNumber"
         android:layout_width="match_parent"
         android:layout_height="50dp"
+        android:layout_marginLeft="5dp"
+        android:layout_marginRight="5dp"
         android:layout_marginTop="10dp"
         android:background="#FFF"
         android:gravity="center"
-        android:textSize="30dp"
-        android:layout_marginLeft="5dp"
-        android:layout_marginRight="5dp"
         android:hint="Enter number"
-        android:inputType="number" />
+        android:inputType="number"
+        android:textSize="30dp" />
 
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -35,9 +35,9 @@
             android:id="@+id/linearLayout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical"
-            android:background="#e8e9cf"
             android:layout_margin="1dp"
+            android:background="#e8e9cf"
+            android:orientation="vertical"
             android:padding="12dp"
             android:weightSum="8">
 
@@ -54,8 +54,7 @@
                     android:gravity="center"
                     android:text="PARKING TICKET"
                     android:textSize="15dp"
-                    android:textStyle="bold"
-                   />
+                    android:textStyle="bold" />
             </LinearLayout>
 
             <LinearLayout
@@ -85,7 +84,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -109,7 +107,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -133,7 +130,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -160,7 +156,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -185,7 +180,6 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -199,7 +193,7 @@
                     android:text="Total Hours"
                     android:textColor="#b11911"
                     android:textSize="17dp"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvTotalHours"
@@ -207,19 +201,16 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:textSize="17dp"
-                    android:textStyle="bold"
+                    android:text=""
                     android:textColor="#b11911"
-                    android:text="" />
-
-
+                    android:textSize="17dp"
+                    android:textStyle="bold" />
 
             </LinearLayout>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="0dp"
-
                 android:layout_weight="1"
                 android:gravity="center"
                 android:orientation="horizontal"
@@ -230,10 +221,10 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:textSize="17dp"
-                    android:textStyle="bold"
+                    android:text="Total Price"
                     android:textColor="#b11911"
-                    android:text="Total Price" />
+                    android:textSize="17dp"
+                    android:textStyle="bold" />
 
                 <TextView
                     android:id="@+id/tvTotallPrice"
@@ -241,16 +232,13 @@
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:gravity="right"
-                    android:textSize="17dp"
-                    android:textStyle="bold"
+                    android:text=""
                     android:textColor="#b11911"
-                    android:text="" />
+                    android:textSize="17dp"
+                    android:textStyle="bold" />
             </LinearLayout>
-
         </LinearLayout>
-
     </android.support.v7.widget.CardView>
-
 
     <Button
         android:id="@+id/btnPrintMix"
