--- a/app/src/main/res/layout/sessmainact.xml
+++ b/app/src/main/res/layout/sessmainact.xml
@@ -6,11 +6,9 @@
     android:orientation="vertical"
     android:padding="10dip">
 
-
-
-    <!-- Button to show session data -->
-    <Button android:id="@+id/btnLogout"
+    <Button
+        android:id="@+id/btnLogout"
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
-        android:text="Logout"/>
+        android:text="Logout" />
 </LinearLayout>
